Overflow fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -92,7 +92,6 @@ main {
 @media screen and (max-width: 1300px) {
   main {
     overflow-y: visible;
-    overflow-x: hidden;
   }
 
   .navigation {
@@ -157,9 +156,9 @@ main {
   }
   
   .social-icon {
-      font-size: 30px;
+      font-size: 25px;
       color: hsl(216, 60%, 21%);
-      padding: 1rem 1.2rem;
+      padding: 1rem 0.75rem;
   }
 }
 
